<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/big_image"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:contentDescription="@string/background_big" />

        <ImageView
            android:contentDescription="@string/background_logo"
            android:layout_width="match_parent"
            android:layout_height="328dp"
            android:layout_alignBottom="@id/big_image"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="0dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="-12dp"
            android:src="@drawable/smartadvertise" />

    </RelativeLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layoutHeader"
        android:layout_width="match_parent"
        android:layout_height="130dp"
        android:background="@drawable/header_background"
        android:padding="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RelativeLayout
            android:id="@+id/relativeLayout"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/small_image"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:contentDescription="@string/background_big" />

            <ImageView
                android:layout_width="100dp"
                android:layout_height="328dp"
                android:layout_alignBottom="@id/small_image"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="102dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="-152dp"
                android:layout_marginBottom="-75dp"
                android:contentDescription="@string/background_logo"
                android:src="@drawable/grey_logo" />

        </RelativeLayout>

        <TextView
            android:id="@+id/textwelcomeback"
            android:layout_width="200dp"
            android:layout_height="30dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="15dp"
            android:text="@string/welcomeback"
            android:textStyle="bold"
            android:textColor="#FFFFFF"
            android:textSize="25sp"
            app:layout_constraintEnd_toStartOf="@+id/logoutbutton"
            app:layout_constraintBottom_toTopOf="@+id/textmr"
            app:layout_constraintHorizontal_bias="0.028"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textmr"
            android:layout_width="200dp"
            android:layout_height="30dp"
            android:layout_marginStart="36dp"
            android:text="@string/mr"
            android:textColor="#FFFFFF"
            android:textStyle="bold"
            android:textSize="25sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/memberlevel"
            app:layout_constraintTop_toBottomOf="@+id/textwelcomeback" />

        <TextView
            android:id="@+id/memberlevel"
            android:layout_width="180dp"
            android:layout_height="30dp"
            android:layout_marginStart="36dp"
            android:layout_marginTop="0dp"
            android:text="@string/member_level"
            android:textColor="#FFFFFF"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/textmr"
            app:layout_constraintBottom_toBottomOf="@+id/layoutHeader"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/rank"
            android:layout_width="70dp"
            android:layout_height="30dp"
            android:layout_marginTop="0dp"
            android:text="@string/rank"
            android:textColor="#FFD700"
            android:textSize="25sp"
            android:textStyle="bold"
            android:textAllCaps="true"
            app:layout_constraintBottom_toBottomOf="@+id/layoutHeader"
            app:layout_constraintStart_toEndOf="@+id/memberlevel"
            app:layout_constraintTop_toBottomOf="@id/textmr" />

        <Button
            android:id="@+id/profilepic"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:background="@drawable/profileicon"
            app:layout_constraintTop_toBottomOf="@+id/logoutbutton"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@id/rank" />


        <Button
            android:id="@+id/logoutbutton"
            android:layout_width="130dp"
            android:layout_height="60dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:background="@null"
            android:text="@string/logout"
            android:textStyle="bold"
            android:textAllCaps="false"
            android:textColor="#FFFFFF"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/button01"
        android:layout_width="170dp"
        android:layout_height="170dp"
        android:layout_marginStart="35dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/play"
        app:layout_constraintBottom_toTopOf="@+id/button03"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layoutHeader"
        app:layout_constraintRight_toLeftOf="@+id/button02"
        app:layout_constraintVertical_bias="0.118" />

    <Button
        android:id="@+id/button02"
        android:layout_width="170dp"
        android:layout_height="170dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="35dp"
        android:background="@drawable/stop"
        app:layout_constraintBottom_toTopOf="@+id/button03"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layoutHeader"
        app:layout_constraintLeft_toRightOf="@+id/button01"
        app:layout_constraintVertical_bias="0.118" />

    <ViewFlipper
        android:id="@+id/button03"
        android:layout_width="320dp"
        android:layout_height="160dp"
        android:layout_marginTop="260dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/adsplaymins"
        app:layout_constraintBottom_toTopOf="@+id/layoutTailer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layoutHeader" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layoutTailer"
        android:layout_width="380dp"
        android:layout_height="70dp"
        android:layout_marginBottom="60dp"
        android:background="@drawable/tail_background"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/Homebutton"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="60dp"
            android:background="@drawable/icon_home"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.466">

        </Button>

        <Button
            android:id="@+id/Profilebutton"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="52dp"
            android:background="@drawable/icon_profile"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/Settingbutton"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/Homebutton"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.133">

        </Button>

        <Button
            android:id="@+id/Settingbutton"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginEnd="50dp"
            android:background="@drawable/icon_setting"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.466">

        </Button>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>